--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,8 @@
   padding-top: 100px;
   overflow: hidden;
   width: 100%;
+  margin: 0;
+  height: 100%;
 }
 
 /* this style is to set a profile picture */
