update new style + adding description of content

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ body {
   margin: 0px;
   color: #fff;
   /*background-color: #222;*/
-  background-image: url("../img/bg.svg");
+  background-image: url("../img/bg-new.svg");
 }
 
 /* this one to wrap all embedded content */
